# real-time-audio-visual-zooming

./: .gitignore  TODO  bulk_results.csv  eval.py  evaluation_results.csv  pyproject.toml  readme.md  requirements.txt
Final_pipeline/: analysis.py  batch_run.py  run.py
Final_pipeline/src/: competitors.py  config.py  inference.py  metrics.py  simulation.py
bulk_gpu/: bulk_results.csv  bulk_testing_gpu.py  bullk_testing_gpu.ipynb  cov_estimator.py  eval.py  world.py
experiments/: zoomable_mvdr.py
experiments/caliberation/: world_caliberate.py
experiments/full_audio_generating_pipeline/: beam-forming.ipynb  inference.py
experiments/loaded_mvdr/: sigma_vs_bw.py  world_builder.py  zoomable_mvdr.py
experiments/masked_mvdr_exp/: benchmark_results_world.csv  benchmark_results_world_5.csv  debug_src.py  duet.py  eval.py  inference.py  inference_and_deployment.py  mask_1.pth  masked_mvdr.py  mvdr.py  neural_model_train.py  oracle.py  oracle_cwt.py  oracle_debug.py  oracle_zoom.py  peqs.py  profiler_utils.py  run_benchmark.py  stress.py  validate.py  world.py  world_caliberate.py
experiments/max_snr/: oracle.py  test_maxsnr.py  test_validate.py  test_world.py
experiments/neural_model+mvdr/: inference_and_deployment.py  neural_model_train.py
experiments/neural_model_mvdr/: inference_and_deployment.py  world_builder.py
experiments/oracle_debug/: oracle_debug.py
experiments/paper/: actuator.py  anchors.py  classifier.py  config.py  detectors.py  eval.py  features.py  final_check.py  oracle_diagnostics.py  run_demo.py  run_full_system.py  sanity_check.py  surgery.py  temporal.py  world.py
pipeline_masked_mvdr/: debug_src.py  masked_mvdr.py  pipeline.py  validate.py  world.py
rt_av_zoom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: debug_srp.py  eval.py  plot_pesq.py  run_metrics.py  run_pipeline.py  spectro_plotter.py
(+1549 files in other folders)
